# techshop

./: .coverage  CODE_REVIEW.md  pyproject.toml
.github/workflows/: ci.yml
docs/: BACKLOG.md  PRD.md  PRD_AUTH.md
src/: cart.py  main.py  models.py
tests/: test_cart.py  test_checkout.py  test_main.py
tests/integration/: test_cart_flow.py
tests/unit/: test_cart.py  test_models.py
