[project]
name = "techshop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "uvicorn>=0.46.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=2.0.0",
    "playwright>=1.59.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.12",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
pythonpath = "."
